fixing field on Safari close #8

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -193,6 +193,7 @@ footer
 
 	.mc-field-group
 		flex: 1
+		height: 50px
 
 	input.email	
 		height: 100%
@@ -214,4 +215,7 @@ footer
 
 		&:-ms-input-placeholder
 			font-weight: 100
+
+	.green-button
+		height: 50px
 
